[gd_scene load_steps=9 format=3 uid="uid://cpg5vyoaa6q0u"]

[ext_resource type="Script" uid="uid://bxepo6hinyn76" path="res://src/ui/level_end_ui.gd" id="1_l7l2g"]
[ext_resource type="Texture2D" uid="uid://dm0nng18hjj4j" path="res://assets/sprites/test panel.png" id="2_db68v"]
[ext_resource type="Texture2D" uid="uid://dn5m5fjreoepw" path="res://assets/sprites/play button.png" id="3_db68v"]
[ext_resource type="FontFile" uid="uid://7wa3qdioyyd6" path="res://assets/gnomoria_rus.ttf" id="3_o5oy0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o5oy0"]
texture = ExtResource("2_db68v")

[sub_resource type="LabelSettings" id="LabelSettings_3y365"]
font = ExtResource("3_o5oy0")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_l7l2g"]
font = ExtResource("3_o5oy0")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_o5oy0"]
font = ExtResource("3_o5oy0")
font_size = 8

[node name="level_end_ui" type="CanvasLayer"]
script = ExtResource("1_l7l2g")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_o5oy0")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "RUN_RESULTS"
label_settings = SubResource("LabelSettings_3y365")
horizontal_alignment = 1

[node name="distance_label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Distance money: 
085"
label_settings = SubResource("LabelSettings_l7l2g")
horizontal_alignment = 1

[node name="zombie_label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Zombie money:
0"
label_settings = SubResource("LabelSettings_o5oy0")
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_db68v")

[connection signal="ready" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/distance_label" to="." method="_on_distance_label_ready"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
